--- a/src/app/exchange-rates/exchange-rates.component.html
+++ b/src/app/exchange-rates/exchange-rates.component.html
@@ -6,16 +6,44 @@
             </h2>
         </div>
         <div *ngFor="let exchangerate of exchangeRates | keyvalue" class="exchange-rate-row">
-            <div class="exchange-rate-key"><strong>{{ exchangerate.key }}:</strong></div>
-            <div class="exchange-rate-value" *ngIf="exchangerate.key === 'conversion_rates'">
-                <div *ngFor="let conversion of conversionRates | keyvalue" >
-                    {{conversion.key}}: {{conversion.value}}
-                </div>
-            </div>
+            <div class="exchange-rate-key" *ngIf="exchangerate.key !== 'conversion_rates'"><strong>{{ exchangerate.key }}:</strong></div>
+           
             <div class="exchange-rate-value" *ngIf="exchangerate.key !== 'conversion_rates'">
                 {{ exchangerate.value }}
             </div>
         </div>
+        <div *ngIf="exchangeRates" class="center-content">
+            <div class="container">
+                <div>
+                    <h2 style="background: #3f51b5; color: white; border: 1px solid #3f51b5; border-radius: 5px;">
+                        conversion_rates
+                    </h2>
+                </div>
+                <div class="exchange-rate-table-container">
+                    <table class="exchange-rate-table">
+                        <thead>
+                            <tr>
+                                <th>Currency</th>
+                                <th>Rate</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let conversion of exchangeRates.conversion_rates | keyvalue">
+                                <td>{{conversion.key}}</td>
+                                <td>{{conversion.value}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        
+        <div *ngIf="!exchangeRates" class="center-content">
+            <div class="message-container">
+                <h2>Sorry !!! API Key has been Expired</h2>
+            </div>
+        </div>
+        
     </div>
 </div>
 
