--- a/src/app/exchange-rates/exchange-rates.component.scss
+++ b/src/app/exchange-rates/exchange-rates.component.scss
@@ -70,4 +70,38 @@
   .exchange-rate-value {
     text-align: right; /* Align text to the right */
   }
-  
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.exchange-rate-table-container {
+    max-height: 400px; /* Set the maximum height for the scroll */
+    overflow-y: auto; /* Enable vertical scrolling */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow to the table container */
+    margin-top: 20px;
+}
+
+.exchange-rate-table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+}
+
+.exchange-rate-table th,
+.exchange-rate-table td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.exchange-rate-table th {
+    background-color: #f2f2f2;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+.exchange-rate-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
